# Fast_api_gsheets

./: .env.example  .flake8  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 01_initial_structure.py
app/: main.py
app/api/: routers.py
app/api/endpoints/: __init__.py  charity_projects.py  donations.py  google.py  users.py
app/core/: base.py  config.py  constants.py  db.py  google_client.py  init_db.py  user.py
app/crud/: base.py  charity_project.py  donation.py
app/models/: __init__.py  charity_project.py  donation.py  mixins.py
app/schemas/: base.py  charity_project.py  donation.py
app/services/: __init__.py  charity_project.py  donation.py  funds_base.py  funds_listeners.py  google_api.py
