[project]
name = "fast-api-gsheets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogoogle==4.2.0",
    "aiosqlite==0.17.0",
    "fastapi==0.78.0",
    "fastapi-users[sqlalchemy]==10.0.4",
    "packaging==21.3",
    "pytest>=8.3.3",
    "setuptools>=74.1.2",
    "uvicorn[standard]==0.17.6",
]
